# Agentic-Blogspot

./: main.py  pyproject.toml
blogspot/: README.md  app.py  pyproject.toml  report.md  server.py
blogspot/src/blogspot/: crew.py  main.py
blogspot/src/blogspot/config/: agents.yaml  tasks.yaml
