[project]
name = "blogspot"
version = "0.1.0"
description = "BlogSpot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools,google-genai]==1.9.3",
    "fastapi>=0.135.1",
    "litellm>=1.75.3",
    "streamlit>=1.40.0",
]

[project.scripts]
blogspot = "blogspot.main:run"
run_crew = "blogspot.main:run"
train = "blogspot.main:train"
replay = "blogspot.main:replay"
test = "blogspot.main:test"
run_with_trigger = "blogspot.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
